[package]
name = "rusc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Errors
thiserror = "^1"
miette = { version = "^5", features = ["fancy"] }

# Logs
tracing = "^0.1"
tracing-subscriber = "^0.3"

# Command line utils
indicatif = "^0.17"
tracing-indicatif = "0.3"

# Serde
serde = { version = "^1" }
serde_json = { version = "^1" }
toml = "^0.7"

# Compressors
flate2 = "^1"
lz4_flex = "^0.11"
zstd = "^0.12"
