[workspace]
members = ["crates/*"]

[package]
name = "rusc"
version = "0.1.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Errors
thiserror = "^1"
anyhow = "^1"

# Logs
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }

# Command line utils
clap = { version = "^4", features = ["derive"] }
indicatif = "^0.17"
tracing-indicatif = "0.3"

itertools = "0.11"

# Serde
serde = { version = "^1", features = ["derive"] }
serde_json = { version = "^1" }
toml = "^0.7"

# Compressors
flate2 = "^1"
lz4_flex = "^0.11"
zstd = "^0.12"
